--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["cookies"] }
 scraper = "0.14.0"
-serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
-symphonia = { version = "0.5" }
+futures = "0.3"
+hyper = { version = "0.14", features = ["full"] }
+hyper-tls = "0.5"
+log = "0.4"
+env_logger = "0.10"
