--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ hyper = { version = "0.14", features = ["full"] }
 hyper-tls = "0.5"
 log = "0.4"
 env_logger = "0.10"
+lighthouse = { path = "lighthouse" }
 
 [workspace]
 members = [
