--- a/lighthouse/Cargo.toml
+++ b/lighthouse/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-tokio = { version = "1.27", features = ["rt", "macros"]}
+tokio = { version = "1.27", features = ["rt", "macros", "time"] }
